<resources>
    <string name="app_name">GardenApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connectivity">Connectivity</string>
    <string name="search_devices">Search Devices</string>
    <string name="require_manual_control">Require Manual Control</string>
    <string name="led_3">Led 3</string>
    <string name="led_2">Led 2</string>
    <string name="led_1">Led 1</string>
    <string name="light_system">Light System</string>
    <string name="slide_to_add_brightness">Slide to add brightness</string>
    <string name="led_4">Led 4</string>
    <string name="irrigation_system">Irrigation System</string>
    <string name="start_irrigation_system">Start Irrigation System</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="device_found">Device Found</string>
    <string name="device_name">Device Name</string>
    <string name="ff_ff_ff_ff_ff_ff">FF:FF:FF:FF:FF:FF</string>
</resources>