<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LightFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="367dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/light_system"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_led_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_sun_black"
            android:text="@string/led_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_led_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:drawableTop="@drawable/ic_sun_black"
            android:text="@string/led_2"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/btn_led_1"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_led_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:drawableTop="@drawable/ic_sun_black"
            android:text="@string/led_3"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_led_1" />

        <Button
            android:id="@+id/btn_led_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/ic_sun_black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/led_4"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/btn_led_3"
            app:layout_constraintTop_toBottomOf="@+id/btn_led_2" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/blue"
            android:padding="16dp"
            android:text="@string/require_manual_control"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_led_3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/slide_to_add_brightness"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="5"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_led_3"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_led_4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/slide_to_add_brightness"
            android:valueFrom="0"
            android:valueTo="5"
            android:stepSize="1"
            app:layout_constraintStart_toEndOf="@+id/slider_led_3"
            app:layout_constraintTop_toBottomOf="@+id/btn_led_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>